add item table for different qty

--- a/app/_home.html
+++ b/app/_home.html
@@ -466,7 +466,7 @@
                     </div>
 
                     <div class="flex flex-row w-100">
-                      <div class="f5 flex mh3 flex-column w-50">
+                      <div class="f5 flex mh3 flex-column w-60">
                         <div class="product-title mid-gray">
                           <span class="w_BT">Rubies T-Rex Dinosaur Toddler Halloween Costume</span>
                         </div>
@@ -476,7 +476,7 @@
                         </div>
                       </div>
 
-                      <div class="price-qty flex flex-row justify-between w-50">
+                      <div class="price-qty flex flex-row justify-between w-40">
                         
                         <div class="f5">
 
@@ -501,7 +501,7 @@
                 <li class="flex flex-column justify-between flex-auto">
                   <div class="flex flex-row">
                     <div class="checkbox-wrapper">
-                      <label for=""> <input type="checkbox" checked=""> </label>
+                      <label for=""><input type="checkbox" checked=""></label>
                     </div>
 
                     <div class="product-image-wrapper">
@@ -509,7 +509,7 @@
                     </div>
 
                     <div class="flex flex-row w-100">
-                      <div class="f5 flex mh3 flex-column w-50">
+                      <div class="f5 flex mh3 flex-column w-60">
                         <div class="product-title mid-gray">
                           <span class="w_BT">Rubies T-Rex Dinosaur Toddler Halloween Costume</span>
                         </div>
@@ -519,7 +519,7 @@
                         </div>
                       </div>
 
-                      <div class="price-qty flex flex-row justify-between w-50">
+                      <div class="price-qty flex flex-row justify-between w-40">
 
                         <div class="f5">
 
@@ -544,7 +544,7 @@
                 <li class="flex flex-column justify-between flex-auto">
                   <div class="flex flex-row">
                     <div class="checkbox-wrapper">
-                      <label for=""><input class="" id="" type="checkbox" checked=""></label>
+                      <label for=""><input type="checkbox" checked=""></label>
                     </div>
 
                     <div class="product-image-wrapper">
@@ -552,7 +552,7 @@
                     </div>
 
                     <div class="flex flex-row w-100">
-                      <div class="f5 flex mh3 flex-column w-50">
+                      <div class="f5 flex mh3 flex-column w-60">
                         <div class="product-title mid-gray">
                           <span class="w_BT">Rubies T-Rex Dinosaur Toddler Halloween Costume</span>
                         </div>
@@ -562,7 +562,7 @@
                         </div>
                       </div>
 
-                      <div class="price-qty flex flex-row justify-between w-50">
+                      <div class="price-qty flex flex-row justify-between w-40">
 
                         <div class="f5">
 
@@ -614,7 +614,7 @@
                       </div>
 
                       <div class="price-qty flex flex-row w-25">
-                        <div class="f5 mid-gray w-100 pr4"><span>Qty 1</span></div>
+                        <div class="f5 mid-gray w-100"><span>Qty 1</span></div>
                         <div class="f5 bold"><span>$19.97</span></div>
                       </div>
                     </div>
@@ -643,7 +643,7 @@
                       </div>
 
                       <div class="price-qty flex flex-row w-25">
-                        <div class="f5 mid-gray w-100 pr4"><span>Qty 1</span></div>
+                        <div class="f5 mid-gray w-100"><span>Qty 1</span></div>
                         <div class="f5 bold"><span>$19.97</span></div>
                       </div>
                     </div>
@@ -672,7 +672,7 @@
                       </div>
 
                       <div class="price-qty flex flex-row w-25">
-                        <div class="f5 mid-gray w-100 pr4"><span>Qty 1</span></div>
+                        <div class="f5 mid-gray w-100"><span>Qty 1</span></div>
                         <div class="f5 bold"><span>$19.97</span></div>
                       </div>
                     </div>
