--- a/app/index.html
+++ b/app/index.html
@@ -496,7 +496,7 @@
                     </div>
 
                     <div class="flex flex-row w-100">
-                      <div class="f5 flex mh3 flex-column w-50">
+                      <div class="f5 flex mh3 flex-column w-60">
                         <div class="product-title mid-gray">
                           <span class="w_BT">Rubies T-Rex Dinosaur Toddler Halloween Costume</span>
                         </div>
@@ -506,7 +506,7 @@
                         </div>
                       </div>
 
-                      <div class="price-qty flex flex-row justify-between w-50">
+                      <div class="price-qty flex flex-row justify-between w-40">
                         
                         <div class="f5">
 
@@ -531,7 +531,7 @@
                 <li class="flex flex-column justify-between flex-auto">
                   <div class="flex flex-row">
                     <div class="checkbox-wrapper">
-                      <label for=""> <input type="checkbox" checked=""> </label>
+                      <label for=""><input type="checkbox" checked=""></label>
                     </div>
 
                     <div class="product-image-wrapper">
@@ -539,7 +539,7 @@
                     </div>
 
                     <div class="flex flex-row w-100">
-                      <div class="f5 flex mh3 flex-column w-50">
+                      <div class="f5 flex mh3 flex-column w-60">
                         <div class="product-title mid-gray">
                           <span class="w_BT">Rubies T-Rex Dinosaur Toddler Halloween Costume</span>
                         </div>
@@ -549,7 +549,7 @@
                         </div>
                       </div>
 
-                      <div class="price-qty flex flex-row justify-between w-50">
+                      <div class="price-qty flex flex-row justify-between w-40">
 
                         <div class="f5">
 
@@ -574,7 +574,7 @@
                 <li class="flex flex-column justify-between flex-auto">
                   <div class="flex flex-row">
                     <div class="checkbox-wrapper">
-                      <label for=""><input class="" id="" type="checkbox" checked=""></label>
+                      <label for=""><input type="checkbox" checked=""></label>
                     </div>
 
                     <div class="product-image-wrapper">
@@ -582,7 +582,7 @@
                     </div>
 
                     <div class="flex flex-row w-100">
-                      <div class="f5 flex mh3 flex-column w-50">
+                      <div class="f5 flex mh3 flex-column w-60">
                         <div class="product-title mid-gray">
                           <span class="w_BT">Rubies T-Rex Dinosaur Toddler Halloween Costume</span>
                         </div>
@@ -592,7 +592,7 @@
                         </div>
                       </div>
 
-                      <div class="price-qty flex flex-row justify-between w-50">
+                      <div class="price-qty flex flex-row justify-between w-40">
 
                         <div class="f5">
 
@@ -644,7 +644,7 @@
                       </div>
 
                       <div class="price-qty flex flex-row w-25">
-                        <div class="f5 mid-gray w-100 pr4"><span>Qty 1</span></div>
+                        <div class="f5 mid-gray w-100"><span>Qty 1</span></div>
                         <div class="f5 bold"><span>$19.97</span></div>
                       </div>
                     </div>
@@ -673,7 +673,7 @@
                       </div>
 
                       <div class="price-qty flex flex-row w-25">
-                        <div class="f5 mid-gray w-100 pr4"><span>Qty 1</span></div>
+                        <div class="f5 mid-gray w-100"><span>Qty 1</span></div>
                         <div class="f5 bold"><span>$19.97</span></div>
                       </div>
                     </div>
@@ -702,7 +702,7 @@
                       </div>
 
                       <div class="price-qty flex flex-row w-25">
-                        <div class="f5 mid-gray w-100 pr4"><span>Qty 1</span></div>
+                        <div class="f5 mid-gray w-100"><span>Qty 1</span></div>
                         <div class="f5 bold"><span>$19.97</span></div>
                       </div>
                     </div>
