add page your cart

--- a/app/_home.html
+++ b/app/_home.html
@@ -1,3 +1,6 @@
+<header class="main-header">
+  <h2 class="f4 bold text-center">Checkout</h2>
+</header>
 <main class="main">
   <form id="form_checkout">
     <div class="main-content container flex">
@@ -455,7 +458,7 @@
 
               <ul class="product-list">
 
-                <li class="flex flex-column justify-between flex-auto">
+                <li class="list-item flex flex-column justify-between flex-auto">
                   <div class="flex flex-row">
                     <div class="checkbox-wrapper">
                       <label for=""> <input type="checkbox" checked=""> </label>
@@ -498,7 +501,7 @@
                   </div>
                 </li>
 
-                <li class="flex flex-column justify-between flex-auto">
+                <li class="list-item flex flex-column justify-between flex-auto">
                   <div class="flex flex-row">
                     <div class="checkbox-wrapper">
                       <label for=""><input type="checkbox" checked=""></label>
@@ -541,7 +544,7 @@
                   </div>
                 </li>
 
-                <li class="flex flex-column justify-between flex-auto">
+                <li class="list-item flex flex-column justify-between flex-auto">
                   <div class="flex flex-row">
                     <div class="checkbox-wrapper">
                       <label for=""><input type="checkbox" checked=""></label>
