--- a/app/index.html
+++ b/app/index.html
@@ -25,10 +25,13 @@
 	<link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
+	<!--<header class="main-header">-->
+  <!--<h2 class="f4 bold text-center">Checkout</h2>-->
+<!--</header>-->
 	<header class="main-header">
   <h2 class="f4 bold text-center">Checkout</h2>
 </header>
-	<main class="main">
+<main class="main">
   <form id="form_checkout">
     <div class="main-content container flex">
       <section class="main-section flex-auto">
@@ -485,7 +488,7 @@
 
               <ul class="product-list">
 
-                <li class="flex flex-column justify-between flex-auto">
+                <li class="list-item flex flex-column justify-between flex-auto">
                   <div class="flex flex-row">
                     <div class="checkbox-wrapper">
                       <label for=""> <input type="checkbox" checked=""> </label>
@@ -528,7 +531,7 @@
                   </div>
                 </li>
 
-                <li class="flex flex-column justify-between flex-auto">
+                <li class="list-item flex flex-column justify-between flex-auto">
                   <div class="flex flex-row">
                     <div class="checkbox-wrapper">
                       <label for=""><input type="checkbox" checked=""></label>
@@ -571,7 +574,7 @@
                   </div>
                 </li>
 
-                <li class="flex flex-column justify-between flex-auto">
+                <li class="list-item flex flex-column justify-between flex-auto">
                   <div class="flex flex-row">
                     <div class="checkbox-wrapper">
                       <label for=""><input type="checkbox" checked=""></label>
