--- a/app/_header.html
+++ b/app/_header.html
@@ -1,3 +1,3 @@
-<header class="main-header">
-  <h2 class="f4 bold text-center">Checkout</h2>
-</header>
+<!--<header class="main-header">-->
+  <!--<h2 class="f4 bold text-center">Checkout</h2>-->
+<!--</header>-->
