separate valitation inputs by different forms

--- a/app/_checkout-2.html
+++ b/app/_checkout-2.html
@@ -2,7 +2,7 @@
   <h2 class="f4 bold text-center">Checkout</h2>
 </header>
 <main class="main">
-  <form id="form_checkout">
+  <form id="form_checkout2">
     <div class="main-content container flex">
       <section class="main-section flex-auto">
 
