--- a/app/__index.html
+++ b/app/__index.html
@@ -2,8 +2,7 @@
 <html lang="ru">
 @@include('_head.html')
 <body>
-	@@include('_header.html')
-	@@include('_home.html')
+	@@include('_your_cart.html')
 	@@include('_footer.html')
 	@@include('_scripts.html')
 </body>
